--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     <div id="container" class="container">
       <div class="info">
         <div class="company"><a href="http://www.cecropiasolutions.com" target="_blank">cecropiasolutions.com</a></div>
-        <div class="title">The Hall</div>
+        <div class="title">Lycée Jules Verne Etaples</div>
         <div class="logo"><a href="http://www.cecropiasolutions.com" target="_blank"><img src="img/cec_logo.png"></a></div>
-        <a class="button" id="start_experience" href="#">start experience</a>
+        <a class="button" id="start_experience" href="#">Visiter</a>
         <div class="instructions">
           <div><strong>VR</strong>: Hand controllers and teleport with trigger.</div>
           <div><strong>Desktop</strong>: Keyboard (WASD/arrows) and mouse.</div>
