--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <meta name="twitter:card" content="summary_large_image">
 
-    <meta name="twitter:title" content="Virtual Reality Museum in A-Frame">
+    <meta name="twitter:title" content=" Lycée en VR ETAPLES">
     <meta name="twitter:description" content="WebVR demo that displays art ">
     <meta name="twitter:image" content="https://blog.r23.de/museum/screenshots/thehall1.jpg">
 
@@ -55,9 +55,9 @@
 
     <div id="container" class="container">
       <div class="info">
-        <div class="company"><a href="http://www.cecropiasolutions.com" target="_blank">cecropiasolutions.com</a></div>
-        <div class="title">Lycée Jules Verne Etaples</div>
-        <div class="logo"><a href="http://www.cecropiasolutions.com" target="_blank"><img src="img/cec_logo.png"></a></div>
+        <div class="company"><a href="https://jules-verne-etaples.enthdf.fr/" target="_blank">LYCEE JULES VERNE</a></div>
+        <div class="title">Etaples</div>
+        <div class="logo"><a href="https://www.youtube.com/watch?v=jZpYZY9CrjM&list=PLk59S5lvQ9Hc59xexirHbCGXtrx3zQTnL" target="_blank"><img src="img/logo.png"></a></div>
         <a class="button" id="start_experience" href="#">Visiter</a>
         <div class="instructions">
           <div><strong>VR</strong>: Hand controllers and teleport with trigger.</div>
