--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="info">
         <div class="company"><a href="https://jules-verne-etaples.enthdf.fr/" target="_blank">LYCEE JULES VERNE</a></div>
         <div class="title">Etaples</div>
-        <div class="logo"><a href="https://www.youtube.com/watch?v=jZpYZY9CrjM&list=PLk59S5lvQ9Hc59xexirHbCGXtrx3zQTnL" target="_blank"><img src="img/logo.png"></a></div>
+        <div class="logo"><a href="https://www.youtube.com/watch?v=jZpYZY9CrjM&list=PLk59S5lvQ9Hc59xexirHbCGXtrx3zQTnL" target="_blank"><img src="img/logo.jpg"></a></div>
         <a class="button" id="start_experience" href="#">Visiter</a>
         <div class="instructions">
           <div><strong>VR</strong>: Hand controllers and teleport with trigger.</div>
