--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
         <!-- david_bike_hall_3 -->
         <!--<a-asset-item id="david_bike_hall_3-obj" src="models/david_bike_hall_3.obj"></a-asset-item>-->
-        <a-asset-item id="david_bike_hall_3-ctm" src="models/3d-model.obj"></a-asset-item>
+        <a-asset-item id="david_bike_hall_3-ctm" src="models/robot.obj"></a-asset-item>
         <!--<img id="david_bike_hall_3-texture" src="textures/david_bike_hall_3.jpg">-->
         <!-- - david_bike_hall_3 -->
 
