--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <!-- - monk_uv -->
 
         <!-- david_bike_hall_3 -->
-        <a-asset-item id="david_bike_hall_3-obj" src="models/robot.obj"></a-asset-item>
+        <a-asset-item id="david_bike_hall_3-obj" src="models/david_bike_hall_3.obj"></a-asset-item>
         <!--<a-asset-item id="david_bike_hall_3-ctm" src="models/robot.obj"></a-asset-item>-->
         <!--<img id="david_bike_hall_3-texture" src="textures/david_bike_hall_3.jpg">-->
         <!-- - david_bike_hall_3 -->
