--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@
 
         <!-- acropolis -->
         <a-asset-item id="acropolis-obj" src="models/acropolis.obj"></a-asset-item>
-        <img id="acropolis-texture" src="textures/acropolis.jpg">
+        <img id="acropolis-texture" src="textures/men1.jpg">
         <!-- - acropolis -->
 
         <!-- castle_lake -->
         <a-asset-item id="castle_lake-obj" src="models/castle_lake.obj"></a-asset-item>
-        <img id="castle_lake-texture" src="textures/castle_lake.jpg">
+        <img id="castle_lake-texture" src="textures/men2.jpg">
         <!-- - castle_lake -->
 
         <!-- good_samaritan -->
         <a-asset-item id="good_samaritan-obj" src="models/good_samaritan.obj"></a-asset-item>
-        <img id="good_samaritan-texture" src="textures/good_samaritan.jpg">
+        <img id="good_samaritan-texture" src="textures/menuiserie-1.jpg">
         <!-- - good_samaritan -->
 
         <!-- moonlight -->
