--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         <!-- moonlight -->
         <a-asset-item id="moonlight-obj" src="models/moonlight.obj"></a-asset-item>
-        <img id="moonlight-texture" src="textures/bac-tma2.jpg">
+        <img id="moonlight-texture" src="textures/fm-boi.png">
         <!-- - moonlight -->
 
         <!-- podiums -->
@@ -216,9 +216,9 @@
         <!-- - monk_uv -->
 
         <!-- david_bike_hall_3 -->
-        <a-asset-item id="david_bike_hall_3-obj" src="models/david_bike_hall_3.obj"></a-asset-item>
-        <!--<a-asset-item id="david_bike_hall_3-ctm" src="models/robot.obj"></a-asset-item>-->
-        <!--<img id="david_bike_hall_3-texture" src="textures/david_bike_hall_3.jpg">-->
+        <!--<a-asset-item id="david_bike_hall_3-obj" src="models/david_bike_hall_3.obj"></a-asset-item>-->
+        <!--<a-asset-item id="david_bike_hall_3-ctm" src="models/david_bike_hall_3"></a-asset-item>-->
+        <img id="david_bike_hall_3-texture" src="textures/cap-mbc.png">
         <!-- - david_bike_hall_3 -->
 
 
