--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 
         <!-- david_bike_hall_3 -->
         <!--<a-asset-item id="david_bike_hall_3-obj" src="models/david_bike_hall_3.obj"></a-asset-item>-->
-        <!--<a-asset-item id="david_bike_hall_3-ctm" src="models/david_bike_hall_3"></a-asset-item>-->
-        <img id="david_bike_hall_3-texture" src="textures/cap-mbc.png">
+        <a-asset-item id="david_bike_hall_3-ctm" src="models/david_bike_hall_3.ctm"></a-asset-item>
+        <!--<img id="david_bike_hall_3-texture" src="textures/cap-mbc.png">-->
         <!-- - david_bike_hall_3 -->
 
 
