--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         <!-- - lamps -->
 
         <!-- david -->
-        <!--<a-asset-item id="david-obj" src="models/david.obj"></a-asset-item>-->
-        <a-asset-item id="david-ctm" src="models/david.ctm"></a-asset-item>
+        <a-asset-item id="david-obj" src="models/david.obj"></a-asset-item>
+        <!--<a-asset-item id="david-ctm" src="models/david.ctm"></a-asset-item>-->
         <!--<img id="david-texture" src="textures/david.jpg">-->
         <!-- - david -->
 
@@ -254,8 +254,8 @@
       <a-entity obj-model="obj: #podiums-obj;" material="src: #podiums-texture"></a-entity>
       <a-entity obj-model="obj: #lamps-obj;" material="src: #lamps-texture; side: double;"></a-entity>
 
-      <!--<a-entity obj-model="obj: #david-obj;" material="src: #david-texture"></a-entity>-->
-      <a-entity ctm="src: #david-ctm; name:david;"></a-entity>
+      <a-entity obj-model="obj: #david-obj;" material="src: #david-texture"></a-entity>
+      <!--<a-entity ctm="src: #david-ctm; name:david;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #female_head-obj;" material="src: #female_head-texture"></a-entity>-->
       <a-entity ctm="src: #female_head-ctm; name:female_head;"></a-entity>
