--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         <!-- - female_head -->
 
         <!-- lion -->
-        <!--<a-asset-item id="lion-obj" src="models/lion.obj"></a-asset-item>-->
-        <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>
+       <a-asset-item id="lion-obj" src="models/robot.obj"></a-asset-item>
+        <!-- <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>-->
         <!--<img id="lion-texture" src="textures/lion.jpg">-->
         <!-- - lion -->
 
@@ -260,8 +260,8 @@
       <!--<a-entity obj-model="obj: #female_head-obj;" material="src: #female_head-texture"></a-entity>-->
       <a-entity ctm="src: #female_head-ctm; name:female_head;"></a-entity>
 
-      <!--<a-entity obj-model="obj: #lion-obj;" material="src: #lion-texture"></a-entity>-->
-      <a-entity ctm="src: #lion-ctm; name:lion;"></a-entity>
+      <a-entity obj-model="obj: #lion-obj;" material="src: #lion-texture"></a-entity>
+      <!--<a-entity ctm="src: #lion-ctm; name:lion;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #greek_bust-obj;" material="src: #greek_bust-texture"></a-entity>-->
       <a-entity ctm="src: #greek_bust-ctm; name:greek_bust;"></a-entity>
