--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         <!-- moonlight -->
         <a-asset-item id="moonlight-obj" src="models/moonlight.obj"></a-asset-item>
-        <img id="moonlight-texture" src="textures/fotoshoot2.jpg">
+        <img id="moonlight-texture" src="textures/ateliermen.jpg">
         <!-- - moonlight -->
 
         <!-- podiums -->
