--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <!-- - female_head -->
 
         <!-- lion -->
-       <a-asset-item id="lion-obj" src="models/robot.obj"></a-asset-item>
+       <a-asset-item id="lion-obj" src="models/robot.obj" scale="0.01 0.01 0.01"></a-asset-item>
         <!-- <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>-->
         <!--<img id="lion-texture" src="textures/lion.jpg">-->
         <!-- - lion -->
