--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <!-- - female_head -->
 
         <!-- lion -->
-       <a-asset-item id="lion-obj" src="models/robot.obj" scale="0.01 0.01 0.01"></a-asset-item>
+       <a-asset-item id="lion-obj" src="models/elec2.obj" scale="0.01 0.01 0.01"></a-asset-item>
         <!-- <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>-->
         <!--<img id="lion-texture" src="textures/lion.jpg">-->
         <!-- - lion -->
@@ -260,7 +260,7 @@
       <!--<a-entity obj-model="obj: #female_head-obj;" material="src: #female_head-texture"></a-entity>-->
       <a-entity ctm="src: #female_head-ctm; name:female_head;"></a-entity>
 
-      <a-entity obj-model="obj: #lion-obj;" material="src: #lion-texture"></a-entity>
+      <a-entity obj-model="obj: #lion-obj;"  scale="0.01 0.01 0.01" material="src: #lion-texture"></a-entity>
       <!--<a-entity ctm="src: #lion-ctm; name:lion;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #greek_bust-obj;" material="src: #greek_bust-texture"></a-entity>-->
