--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <a-entity mobile></a-entity>
 
-      <a-entity light="type: directional; color: #FFF; intensity: 0.5" position="2 20 0"></a-entity>
+      <a-entity light="type: directional; color: #FFF; intensity: 0.8" position="2 20 0"></a-entity>
       <a-entity light="type: ambient; color: #FFF"></a-entity>
 
       <!-- Custom components with animations -->
@@ -156,21 +156,21 @@
         <!-- - david -->
 
         <!-- female_head -->
-        <!--<a-asset-item id="female_head-obj" src="models/female_head.obj"></a-asset-item>-->
-        <a-asset-item id="female_head-ctm" src="models/female_head.ctm"></a-asset-item>
-        <!--<img id="female_head-texture" src="textures/female_head.jpg">-->
+        <a-asset-item id="female_head-obj" src="models/acropolis.obj"></a-asset-item>
+        <!--<a-asset-item id="female_head-ctm" src="models/female_head.ctm"></a-asset-item>-->
+        <img id="female_head-texture" src="textures/female_head.jpg">
         <!-- - female_head -->
 
         <!-- lion -->
-       <a-asset-item id="lion-obj" src="models/elec2.obj" scale="0.01 0.01 0.01"></a-asset-item>
+       <a-asset-item id="lion-obj" src="models/acropolis.obj"></a-asset-item>
         <!-- <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>-->
-        <!--<img id="lion-texture" src="textures/lion.jpg">-->
+        <img id="lion-texture" src="textures/lion.jpg">
         <!-- - lion -->
 
         <!-- greek_bust -->
-        <!--<a-asset-item id="greek_bust-obj" src="models/greek_bust.obj"></a-asset-item>-->
-        <a-asset-item id="greek_bust-ctm" src="models/greek_bust.ctm"></a-asset-item>
-        <!--<img id="greek_bust-texture" src="textures/greek_bust.jpg">-->
+        <a-asset-item id="greek_bust-obj" src="models/acropolis.obj"></a-asset-item>
+        <!--<a-asset-item id="greek_bust-ctm" src="models/greek_bust.ctm"></a-asset-item>-->
+        <img id="greek_bust-texture" src="textures/greek_bust.jpg">
         <!-- - greek_bust -->
 
         <!-- old_man -->
@@ -180,12 +180,12 @@
         <!-- - old_man -->
 
         <!-- nefertiti -->
-        <!--<a-asset-item id="nefertiti-obj" src="models/nefertiti.obj"></a-asset-item>-->
-        <a-asset-item id="nefertiti-ctm" src="models/nefertiti.ctm"></a-asset-item>
-        <!--<img id="nefertiti-texture" src="textures/nefertiti.jpg">-->
+        <a-asset-item id="nefertiti-obj" src="models/acropolis.obj"></a-asset-item>
+        <!--<a-asset-item id="nefertiti-ctm" src="models/nefertiti.ctm"></a-asset-item>-->
+        <img id="nefertiti-texture" src="textures/nefertiti.jpg">
         <!-- - nefertiti -->
 
-        <!-- fractal_1 -->
+        <!--<!-- fractal_1 -->
         <!--<a-asset-item id="fractal_1-obj" src="models/fractal_1.obj"></a-asset-item>-->
         <a-asset-item id="fractal_1-ctm" src="models/fractal_1.ctm"></a-asset-item>
         <!--<img id="fractal_1-texture" src="textures/fractal_1.jpg">-->
@@ -201,7 +201,7 @@
         <!--<a-asset-item id="fractal_3-obj" src="models/fractal_3.obj"></a-asset-item>-->
         <a-asset-item id="fractal_3-ctm" src="models/fractal_3.ctm"></a-asset-item>
         <!--<img id="fractal_3-texture" src="textures/fractal_3.jpg">-->
-        <!-- - fractal_3 -->
+        <!-- - fractal_3 -->-->
 
         <!-- female_helmet -->
         <!--<a-asset-item id="female_helmet-obj" src="models/female_helmet.obj"></a-asset-item>-->
