--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
         <!-- - lamps -->
 
         <!-- david -->
-        <a-asset-item id="david-obj" src="models/david.obj"></a-asset-item>
+        <a-asset-item id="david-obj" src="models/acropolis.obj"></a-asset-item>
         <!--<a-asset-item id="david-ctm" src="models/david.ctm"></a-asset-item>-->
-        <!--<img id="david-texture" src="textures/david.jpg">-->
+        <img id="david-texture" src="textures/david.jpg">
         <!-- - david -->
 
         <!-- female_head -->
@@ -185,40 +185,40 @@
         <img id="nefertiti-texture" src="textures/nefertiti.jpg">
         <!-- - nefertiti -->
 
-        <!--<!-- fractal_1 -->
+        <!-- fractal_1 -->
         <!--<a-asset-item id="fractal_1-obj" src="models/fractal_1.obj"></a-asset-item>-->
-        <a-asset-item id="fractal_1-ctm" src="models/fractal_1.ctm"></a-asset-item>
+        <!--<a-asset-item id="fractal_1-ctm" src="models/fractal_1.ctm"></a-asset-item>-->
         <!--<img id="fractal_1-texture" src="textures/fractal_1.jpg">-->
         <!-- - fractal_1 -->
 
         <!-- fractal_2 -->
         <!--<a-asset-item id="fractal_2-obj" src="models/fractal_2.obj"></a-asset-item>-->
-        <a-asset-item id="fractal_2-ctm" src="models/fractal_2.ctm"></a-asset-item>
+        <!--<a-asset-item id="fractal_2-ctm" src="models/fractal_2.ctm"></a-asset-item>-->
         <!--<img id="fractal_2-texture" src="textures/fractal_2.jpg">-->
         <!-- - fractal_2 -->
 
         <!-- fractal_3 -->
         <!--<a-asset-item id="fractal_3-obj" src="models/fractal_3.obj"></a-asset-item>-->
-        <a-asset-item id="fractal_3-ctm" src="models/fractal_3.ctm"></a-asset-item>
+        <!--<a-asset-item id="fractal_3-ctm" src="models/fractal_3.ctm"></a-asset-item>-->
         <!--<img id="fractal_3-texture" src="textures/fractal_3.jpg">-->
-        <!-- - fractal_3 -->-->
+        <!-- - fractal_3 -->
 
         <!-- female_helmet -->
         <!--<a-asset-item id="female_helmet-obj" src="models/female_helmet.obj"></a-asset-item>-->
-        <a-asset-item id="female_helmet-ctm" src="models/female_helmet.ctm"></a-asset-item>
+        <!--<a-asset-item id="female_helmet-ctm" src="models/female_helmet.ctm"></a-asset-item>-->
         <!--<img id="female_helmet-texture" src="textures/female_helmet.jpg">-->
         <!-- - female_helmet -->
 
         <!-- monk_uv -->
         <!--<a-asset-item id="monk_uv-obj" src="models/monk_uv.obj"></a-asset-item>-->
-        <a-asset-item id="monk_uv-ctm" src="models/monk_uv.ctm"></a-asset-item>
+        <!--<a-asset-item id="monk_uv-ctm" src="models/monk_uv.ctm"></a-asset-item>-->
         <!--<img id="monk_uv-texture" src="textures/monk_uv.jpg">-->
         <!-- - monk_uv -->
 
         <!-- david_bike_hall_3 -->
-        <!--<a-asset-item id="david_bike_hall_3-obj" src="models/david_bike_hall_3.obj"></a-asset-item>-->
-        <a-asset-item id="david_bike_hall_3-ctm" src="models/david_bike_hall_3.ctm"></a-asset-item>
-        <!--<img id="david_bike_hall_3-texture" src="textures/cap-mbc.png">-->
+        <a-asset-item id="david_bike_hall_3-obj" src="models/acropolis.obj"></a-asset-item>
+        <!--<a-asset-item id="david_bike_hall_3-ctm" src="models/david_bike_hall_3.ctm"></a-asset-item>-->
+        <img id="david_bike_hall_3-texture" src="textures/cap-mbc.png">
         <!-- - david_bike_hall_3 -->
 
 
