--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
         <!-- - monk_uv -->
 
         <!-- david_bike_hall_3 -->
-        <a-asset-item id="david_bike_hall_3-obj" src="models/acropolis.obj"></a-asset-item>
+        <a-asset-item id="david_bike_hall_3-obj" src="models/sur_chantier.glb"></a-asset-item>
         <!--<a-asset-item id="david_bike_hall_3-ctm" src="models/david_bike_hall_3.ctm"></a-asset-item>-->
-        <img id="david_bike_hall_3-texture" src="textures/cap-mbc.png">
+        <!--<img id="david_bike_hall_3-texture" src="textures/cap-mbc.png">-->
         <!-- - david_bike_hall_3 -->
 
 
@@ -287,8 +287,8 @@
       <!--<a-entity obj-model="obj: #monk_uv-obj;" material="src: #monk_uv-texture"></a-entity>-->
       <a-entity ctm="src: #monk_uv-ctm; name:monk_uv;"></a-entity>
 
-      <!--<a-entity obj-model="obj: #david_bike_hall_3-obj;" material="src: #david_bike_hall_3-texture"></a-entity>-->
-      <a-entity ctm="src: #david_bike_hall_3-ctm; name:david_bike_hall_3;"></a-entity>
+      <a-entity obj-model="glb: #david_bike_hall_3-obj;" material="src: #david_bike_hall_3-texture"></a-entity>
+      <!--<a-entity ctm="src: #david_bike_hall_3-ctm; name:david_bike_hall_3;"></a-entity>-->
 
       <a-entity mocap="head: #am_threejs_CEC_BODY_1_HEAD-mocap;
                        left: #am_threejs_CEC_BODY_1_LEFT-mocap;
