--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         <!-- old_man -->
         <!--<a-asset-item id="old_man-obj" src="models/old_man.obj"></a-asset-item>-->
-        <a-asset-item id="old_man-ctm" src="models/old_man.ctm"></a-asset-item>
+        <!--<a-asset-item id="old_man-ctm" src="models/old_man.ctm"></a-asset-item>-->
         <!--<img id="old_man-texture" src="textures/old_man.jpg">-->
         <!-- - old_man -->
 
@@ -267,7 +267,7 @@
       <a-entity ctm="src: #greek_bust-ctm; name:greek_bust;"></a-entity>
 
       <!--<a-entity obj-model="obj: #old_man-obj;" material="src: #old_man-texture"></a-entity>-->
-      <a-entity ctm="src: #old_man-ctm; name:old_man;"></a-entity>
+      <!--<a-entity ctm="src: #old_man-ctm; name:old_man;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #nefertiti-obj;" material="src: #nefertiti-texture"></a-entity>-->
       <a-entity ctm="src: #nefertiti-ctm; name:nefertiti;"></a-entity>
@@ -287,7 +287,7 @@
       <!--<a-entity obj-model="obj: #monk_uv-obj;" material="src: #monk_uv-texture"></a-entity>-->
       <a-entity ctm="src: #monk_uv-ctm; name:monk_uv;"></a-entity>
 
-      <a-entity obj-model="glb: #david_bike_hall_3-obj;" material="src: #david_bike_hall_3-texture"></a-entity>
+      <a-entity glb-model="glb: #david_bike_hall_3-obj;" material="src: #david_bike_hall_3-texture"></a-entity>
       <!--<a-entity ctm="src: #david_bike_hall_3-ctm; name:david_bike_hall_3;"></a-entity>-->
 
       <a-entity mocap="head: #am_threejs_CEC_BODY_1_HEAD-mocap;
