--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <!--<a-entity obj-model="obj: #monk_uv-obj;" material="src: #monk_uv-texture"></a-entity>-->
       <a-entity ctm="src: #monk_uv-ctm; name:monk_uv;"></a-entity>
 
-      <a-entity glb-model="glb: #david_bike_hall_3-obj;" material="src: #david_bike_hall_3-texture"></a-entity>
+      <a-entity gltf-model="gltf: #david_bike_hall_3-obj;" material="src: #david_bike_hall_3-texture"></a-entity>
       <!--<a-entity ctm="src: #david_bike_hall_3-ctm; name:david_bike_hall_3;"></a-entity>-->
 
       <a-entity mocap="head: #am_threejs_CEC_BODY_1_HEAD-mocap;
