--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <!-- - female_head -->
 
         <!-- lion -->
-       <a-asset-item id="lion-obj" src="models/acropolis.obj"></a-asset-item>
+       <a-asset-item id="lion-obj" src="models/afb1.obj"></a-asset-item>
         <!-- <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>-->
         <img id="lion-texture" src="textures/lion.jpg">
         <!-- - lion -->
@@ -260,7 +260,7 @@
       <!--<a-entity obj-model="obj: #female_head-obj;" material="src: #female_head-texture"></a-entity>-->
       <a-entity ctm="src: #female_head-ctm; name:female_head;"></a-entity>
 
-      <a-entity obj-model="obj: #lion-obj;"  scale="0.01 0.01 0.01" material="src: #lion-texture"></a-entity>
+      <a-entity obj-model="obj: #lion-obj;"  material="src: #lion-texture"></a-entity>
       <!--<a-entity ctm="src: #lion-ctm; name:lion;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #greek_bust-obj;" material="src: #greek_bust-texture"></a-entity>-->
@@ -290,7 +290,7 @@
       <a-entity gltf-model="gltf: #david_bike_hall_3-obj;" material="src: #david_bike_hall_3-texture"></a-entity>
       <!--<a-entity ctm="src: #david_bike_hall_3-ctm; name:david_bike_hall_3;"></a-entity>-->
 
-      <a-entity mocap="head: #am_threejs_CEC_BODY_1_HEAD-mocap;
+     <!-- <a-entity mocap="head: #am_threejs_CEC_BODY_1_HEAD-mocap;
                        left: #am_threejs_CEC_BODY_1_LEFT-mocap;
                        right: #am_threejs_CEC_BODY_1_RIGHT-mocap;
                        totalFrames:645;
@@ -324,7 +324,7 @@
                        torsoPosition: -0.05 -0.4 0.0"
                 position=" -3 1 4"
                 rotation="0 0 0">
-      </a-entity>
+      </a-entity>-->
 
       <a-entity teleport-controls="button: trigger; collision-entities: #floor #hall_low_floor" hand-controls="left"></a-entity>
       <a-entity teleport-controls="button: trigger; collision-entities: #floor #hall_low_floor" hand-controls="right"></a-entity>
