--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <!-- - female_head -->
 
         <!-- lion -->
-       <a-asset-item id="lion-obj" src="models/afb1.obj"></a-asset-item>
+       <a-asset-item id="lion-obj" src="models/lion.obj"></a-asset-item>
         <!-- <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>-->
         <img id="lion-texture" src="textures/lion.jpg">
         <!-- - lion -->
@@ -216,7 +216,7 @@
         <!-- - monk_uv -->
 
         <!-- david_bike_hall_3 -->
-        <a-asset-item id="david_bike_hall_3-obj" src="models/sur_chantier.glb"></a-asset-item>
+        <a-asset-item id="david_bike_hall_3-obj" src="models/afb1.obj"></a-asset-item>
         <!--<a-asset-item id="david_bike_hall_3-ctm" src="models/david_bike_hall_3.ctm"></a-asset-item>-->
         <!--<img id="david_bike_hall_3-texture" src="textures/cap-mbc.png">-->
         <!-- - david_bike_hall_3 -->
@@ -287,7 +287,7 @@
       <!--<a-entity obj-model="obj: #monk_uv-obj;" material="src: #monk_uv-texture"></a-entity>-->
       <a-entity ctm="src: #monk_uv-ctm; name:monk_uv;"></a-entity>
 
-      <a-entity gltf-model="gltf: #david_bike_hall_3-obj;" material="src: #david_bike_hall_3-texture"></a-entity>
+      <a-entity obj-model="obj: #david_bike_hall_3-obj;" material="src: #david_bike_hall_3-texture"></a-entity>
       <!--<a-entity ctm="src: #david_bike_hall_3-ctm; name:david_bike_hall_3;"></a-entity>-->
 
      <!-- <a-entity mocap="head: #am_threejs_CEC_BODY_1_HEAD-mocap;
