--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <div class="logo"><a href="https://www.youtube.com/watch?v=jZpYZY9CrjM&list=PLk59S5lvQ9Hc59xexirHbCGXtrx3zQTnL" target="_blank"><img src="img/logo.jpg"></a></div>
         <a class="button" id="start_experience" href="#">Visiter</a>
         <div class="instructions">
-          <div><strong>VR</strong>: Hand controllers and teleport with trigger.</div>
-          <div><strong>Desktop</strong>: Keyboard (WASD/arrows) and mouse.</div>
-          <div><strong>Mobile</strong>: Gaze cursor and teleportation.</div>
+          <div><strong>VR</strong>: Controles et téléportation avec manettes.</div>
+          <div><strong>Desktop</strong>: Clavier (WASD/fleches) et souris.</div>
+          <div><strong>Mobile</strong>: mouvements et teleportation.</div>
         </div>
       </div>
     </div>
@@ -287,7 +287,7 @@
       <!--<a-entity obj-model="obj: #monk_uv-obj;" material="src: #monk_uv-texture"></a-entity>-->
       <a-entity ctm="src: #monk_uv-ctm; name:monk_uv;"></a-entity>
 
-      <a-entity obj-model="obj: #david_bike_hall_3-obj;" material="src: #david_bike_hall_3-texture"></a-entity>
+      <a-entity obj-model="obj: #david_bike_hall_3-obj;" material="src: #lion-texture"></a-entity>
       <!--<a-entity ctm="src: #david_bike_hall_3-ctm; name:david_bike_hall_3;"></a-entity>-->
 
      <!-- <a-entity mocap="head: #am_threejs_CEC_BODY_1_HEAD-mocap;
