--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <div class="logo"><a href="https://www.youtube.com/watch?v=jZpYZY9CrjM&list=PLk59S5lvQ9Hc59xexirHbCGXtrx3zQTnL" target="_blank"><img src="img/logo.jpg"></a></div>
         <a class="button" id="start_experience" href="#">Visiter</a>
         <div class="instructions">
-          <div><strong>VR</strong>: Controles et téléportation avec manettes.</div>
-          <div><strong>Desktop</strong>: Clavier (WASD/fleches) et souris.</div>
-          <div><strong>Mobile</strong>: mouvements et teleportation.</div>
+          <div><strong>VR</strong>: Controles et téléportation avec Manettes.</div>
+          <div><strong>Desktop</strong>: Clavier (WASD/fleches) et Souris.</div>
+          <div><strong>Mobile</strong>: Mouvements et Ecran tactil.</div>
         </div>
       </div>
     </div>
@@ -73,7 +73,7 @@
 
       <a-entity mobile></a-entity>
 
-      <a-entity light="type: directional; color: #FFF; intensity: 0.8" position="2 20 0"></a-entity>
+      <a-entity light="type: directional; color: #FFF; intensity: 1.8" position="2 20 0"></a-entity>
       <a-entity light="type: ambient; color: #FFF"></a-entity>
 
       <!-- Custom components with animations -->
