--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
         <!-- david -->
         <a-asset-item id="david-obj" src="models/acropolis.obj"></a-asset-item>
         <!--<a-asset-item id="david-ctm" src="models/david.ctm"></a-asset-item>-->
-        <img id="david-texture" src="textures/men.jpg">
+        <img id="david-texture" src="textures/men1.jpg">
         <!-- - david -->
 
         <!-- female_head -->
         <a-asset-item id="female_head-obj" src="models/acropolis.obj"></a-asset-item>
         <!--<a-asset-item id="female_head-ctm" src="models/female_head.ctm"></a-asset-item>-->
-        <img id="female_head-texture" src="textures/men.jpg">
+        <img id="female_head-texture" src="textures/men1.jpg">
         <!-- - female_head -->
 
         <!-- lion -->
@@ -170,19 +170,19 @@
         <!-- greek_bust -->
         <a-asset-item id="greek_bust-obj" src="models/acropolis.obj"></a-asset-item>
         <!--<a-asset-item id="greek_bust-ctm" src="models/greek_bust.ctm"></a-asset-item>-->
-        <img id="greek_bust-texture" src="textures/men.jpg">
+        <img id="greek_bust-texture" src="textures/men1.jpg">
         <!-- - greek_bust -->
 
         <!-- old_man -->
         <!--<a-asset-item id="old_man-obj" src="models/old_man.obj"></a-asset-item>-->
         <!--<a-asset-item id="old_man-ctm" src="models/old_man.ctm"></a-asset-item>-->
-        <!--<img id="old_man-texture" src="textures/men.jpg">-->
+        <!--<img id="old_man-texture" src="textures/men1.jpg">-->
         <!-- - old_man -->
 
         <!-- nefertiti -->
         <a-asset-item id="nefertiti-obj" src="models/acropolis.obj"></a-asset-item>
         <!--<a-asset-item id="nefertiti-ctm" src="models/nefertiti.ctm"></a-asset-item>-->
-        <img id="nefertiti-texture" src="textures/men.jpg">
+        <img id="nefertiti-texture" src="textures/men1.jpg">
         <!-- - nefertiti -->
 
         <!-- fractal_1 -->
