--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
         <!-- - female_helmet -->
 
         <!-- monk_uv -->
-        <!--<a-asset-item id="monk_uv-obj" src="models/monk_uv.obj"></a-asset-item>-->
+        <a-asset-item id="monk_uv-obj" src="models/tv.obj"></a-asset-item>
         <!--<a-asset-item id="monk_uv-ctm" src="models/monk_uv.ctm"></a-asset-item>-->
-        <!--<img id="monk_uv-texture" src="textures/monk_uv.jpg">-->
+        <img id="monk_uv-texture" src="textures/wood_8b.jpg">
         <!-- - monk_uv -->
 
         <!-- david_bike_hall_3 -->
@@ -284,7 +284,7 @@
       <!--<a-entity obj-model="obj: #female_helmet-obj;" material="src: #female_helmet-texture"></a-entity>-->
       <a-entity ctm="src: #female_helmet-ctm; name:female_helmet;"></a-entity>
 
-      <!--<a-entity obj-model="obj: #monk_uv-obj;" material="src: #monk_uv-texture"></a-entity>-->
+      <a-entity obj-model="obj: #monk_uv-obj;"  position="0 1 -8" material="src: #monk_uv-texture"></a-entity>
       <a-entity ctm="src: #monk_uv-ctm; name:monk_uv;"></a-entity>
 
       <a-entity obj-model="obj: #david_bike_hall_3-obj;"  position="2 1 -8" material="src: #lion-texture"></a-entity>
