--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
       <a-entity ctm="src: #female_helmet-ctm; name:female_helmet;"></a-entity>
 
       <a-entity obj-model="obj: #monk_uv-obj;"  position="0 1 -8" material="src: #monk_uv-texture"></a-entity>
-      <a-entity ctm="src: #monk_uv-ctm; name:monk_uv;"></a-entity>
+      <!--<a-entity ctm="src: #monk_uv-ctm; name:monk_uv;"></a-entity>-->
 
-      <a-entity obj-model="obj: #david_bike_hall_3-obj;"  position="2 1 -8" material="src: #lion-texture"></a-entity>
+      <a-entity obj-model="obj: #david_bike_hall_3-obj;"  position="2 1 -8" rotation="0 -90 0" material="src: #lion-texture"></a-entity>
       <!--<a-entity ctm="src: #david_bike_hall_3-ctm; name:david_bike_hall_3;"></a-entity>-->
 
      <!-- <a-entity mocap="head: #am_threejs_CEC_BODY_1_HEAD-mocap;
