--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <a-entity mobile></a-entity>
 
-      <a-entity light="type: directional; color: #FFF; intensity: 1.8" position="2 20 0"></a-entity>
+      <a-entity light="type: directional; color: #FFF; intensity: 1.5" position="2 18 0"></a-entity>
       <a-entity light="type: ambient; color: #FFF"></a-entity>
 
       <!-- Custom components with animations -->
@@ -284,7 +284,7 @@
       <!--<a-entity obj-model="obj: #female_helmet-obj;" material="src: #female_helmet-texture"></a-entity>-->
       <a-entity ctm="src: #female_helmet-ctm; name:female_helmet;"></a-entity>
 
-      <a-entity obj-model="obj: #monk_uv-obj;"  position="0 1 -8" material="src: #monk_uv-texture"></a-entity>
+      <a-entity obj-model="obj: #monk_uv-obj;" scale="0.01 0.01 0.01" position="-2 1 -8" material="src: #monk_uv-texture"></a-entity>
       <!--<a-entity ctm="src: #monk_uv-ctm; name:monk_uv;"></a-entity>-->
 
       <a-entity obj-model="obj: #david_bike_hall_3-obj;"  position="2 1 -8" rotation="0 -90 0" material="src: #lion-texture"></a-entity>
