--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <!-- floor -->
         <a-asset-item id="floor-obj" src="models/floor.obj"></a-asset-item>
-        <img id="floor-texture" src="textures/wood_8d.jpg">
+        <img id="floor-texture" src="textures/wood_8s.jpg">
         <img id="floor_normal-texture" src="textures/floor_normal.jpg">
         <!-- - floor -->
 
@@ -164,7 +164,7 @@
         <!-- lion -->
        <a-asset-item id="lion-obj" src="models/lion.obj"></a-asset-item>
         <!-- <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>-->
-        <img id="lion-texture" src="textures/lion.jpg">
+        <img id="lion-texture" src="textures/wood_8b.jpg">
         <!-- - lion -->
 
         <!-- greek_bust -->
@@ -284,10 +284,10 @@
       <!--<a-entity obj-model="obj: #female_helmet-obj;" material="src: #female_helmet-texture"></a-entity>-->
       <a-entity ctm="src: #female_helmet-ctm; name:female_helmet;"></a-entity>
 
-      <a-entity obj-model="obj: #monk_uv-obj;" scale="0.01 0.01 0.01" position="-2 1 -8" material="src: #monk_uv-texture"></a-entity>
+      <a-entity obj-model="obj: #monk_uv-obj;" scale="0.03 0.03 0.03" position="-2 1 -8" material="src: #monk_uv-texture"></a-entity>
       <!--<a-entity ctm="src: #monk_uv-ctm; name:monk_uv;"></a-entity>-->
 
-      <a-entity obj-model="obj: #david_bike_hall_3-obj;"  position="2 1 -8" rotation="0 -90 0" material="src: #lion-texture"></a-entity>
+      <a-entity obj-model="obj: #david_bike_hall_3-obj;"  scale="0.7 0.7 0.7" position="2 1 -8" rotation="0 -90 0" material="src: #lion-texture"></a-entity>
       <!--<a-entity ctm="src: #david_bike_hall_3-ctm; name:david_bike_hall_3;"></a-entity>-->
 
      <!-- <a-entity mocap="head: #am_threejs_CEC_BODY_1_HEAD-mocap;
