--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <!-- floor -->
         <a-asset-item id="floor-obj" src="models/floor.obj"></a-asset-item>
-        <img id="floor-texture" src="textures/wood_8s.jpg">
+        <img id="floor-texture" src="textures/wood_8b.jpg">
         <img id="floor_normal-texture" src="textures/floor_normal.jpg">
         <!-- - floor -->
 
