--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!-- floor -->
         <a-asset-item id="floor-obj" src="models/floor.obj"></a-asset-item>
         <img id="floor-texture" src="textures/wood_8d.jpg">
-        <img id="floor_normal-texture" src="textures/wood_8b.jpg">
+        <!--<img id="floor_normal-texture" src="textures/wood_8b.jpg">-->
         <!-- - floor -->
 
         <!-- hall -->
@@ -287,7 +287,7 @@
       <a-entity obj-model="obj: #monk_uv-obj;" scale="0.03 0.03 0.03" position="-3 0.5 -6" material="src: #monk_uv-texture"></a-entity>
       <!--<a-entity ctm="src: #monk_uv-ctm; name:monk_uv;"></a-entity>-->
 
-      <a-entity obj-model="obj: #david_bike_hall_3-obj;"  scale="0.7 0.7 0.7" position="3 0.5 -6" rotation="0 -90 0" material="src: #lion-texture"></a-entity>
+      <a-entity obj-model="obj: #david_bike_hall_3-obj;"  scale="0.7 0.7 0.7" position="3 0.6 -6" rotation="0 -90 0" material="src: #lion-texture"></a-entity>
       <!--<a-entity ctm="src: #david_bike_hall_3-ctm; name:david_bike_hall_3;"></a-entity>-->
 
      <!-- <a-entity mocap="head: #am_threejs_CEC_BODY_1_HEAD-mocap;
