--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <!-- monk_uv -->
         <a-asset-item id="monk_uv-obj" src="models/tv.obj"></a-asset-item>
         <!--<a-asset-item id="monk_uv-ctm" src="models/monk_uv.ctm"></a-asset-item>-->
-        <img id="monk_uv-texture" src="textures/wood_8b.jpg">
+        <img id="monk_uv-texture" src="textures/wood_8d.jpg">
         <!-- - monk_uv -->
 
         <!-- david_bike_hall_3 -->
