--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <a-entity light="type: ambient; color: #FFF"></a-entity>
 
       <!-- Custom components with animations -->
-      <a-entity spheres material="shader: envMapMaterial; src:textures/cube/hall/; "></a-entity>
+      <a-entity spheres material="shader: envMapMaterial; src:textures/boule.jpg; "></a-entity>
       <a-entity anim_1></a-entity>
       <a-entity anim_2></a-entity>
 
