--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <a-entity light="type: ambient; color: #FFF"></a-entity>
 
       <!-- Custom components with animations -->
-      <a-entity spheres material="shader: envMapMaterial; src:textures/boule.jpg; "></a-entity>
+      <a-entity spheres material="shader: envMapMaterial; src:textures/boule.jpg"></a-entity>
       <a-entity anim_1></a-entity>
       <a-entity anim_2></a-entity>
 
@@ -162,7 +162,7 @@
         <!-- - female_head -->
 
         <!-- lion -->
-       <a-asset-item id="lion-obj" src="models/lion.obj"></a-asset-item>
+       <a-asset-item id="lion-obj" src="models/Pallet.obj"></a-asset-item>
         <!-- <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>-->
         <img id="lion-texture" src="textures/wood_8b.jpg">
         <!-- - lion -->
