--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       <!--<a-entity obj-model="obj: #female_head-obj;" material="src: #female_head-texture"></a-entity>-->
       <a-entity ctm="src: #female_head-ctm; name:female_head;"></a-entity>
 
-      <a-entity obj-model="obj: #lion-obj;" scale="0.005 0.005 0.005" material="src: #lion-texture"></a-entity>
+      <a-entity obj-model="obj: #lion-obj;" scale="0.005 0.005 0.005" position="-3 1.5 -1" material="src: #lion-texture"></a-entity>
       <!--<a-entity ctm="src: #lion-ctm; name:lion;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #greek_bust-obj;" material="src: #greek_bust-texture"></a-entity>-->
