--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <!-- lion -->
        <a-asset-item id="lion-obj" src="models/Pallet.obj"></a-asset-item>
         <!-- <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>-->
-        <img id="lion-texture" src="textures/wood_8b.jpg">
+        <img id="lion-texture" src="textures/jv.jpg">
         <!-- - lion -->
 
         <!-- greek_bust -->
@@ -260,7 +260,7 @@
       <!--<a-entity obj-model="obj: #female_head-obj;" material="src: #female_head-texture"></a-entity>-->
       <a-entity ctm="src: #female_head-ctm; name:female_head;"></a-entity>
 
-      <a-entity obj-model="obj: #lion-obj;" scale="0.005 0.005 0.005" position="-3 1.5 -1" material="src: #lion-texture"></a-entity>
+      <a-entity obj-model="obj: #lion-obj;" scale="0.005 0.005 0.005" position="-2.5 1.5 -1" rotation="-90 0 0" material="src: #lion-texture"></a-entity>
       <!--<a-entity ctm="src: #lion-ctm; name:lion;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #greek_bust-obj;" material="src: #greek_bust-texture"></a-entity>-->
