--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <!-- lion -->
        <a-asset-item id="lion-obj" src="models/Pallet.obj"></a-asset-item>
         <!-- <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>-->
-        <img id="lion-texture" src="textures/jv.jpg">
+        <img id="lion-texture" src="textures//wood_8d.jpg">
         <!-- - lion -->
 
         <!-- greek_bust -->
@@ -174,9 +174,9 @@
         <!-- - greek_bust -->
 
         <!-- old_man -->
-        <!--<a-asset-item id="old_man-obj" src="models/old_man.obj"></a-asset-item>-->
+        <a-asset-item id="old_man-obj" src="models//3d-model.obj"></a-asset-item>
         <!--<a-asset-item id="old_man-ctm" src="models/old_man.ctm"></a-asset-item>-->
-        <!--<img id="old_man-texture" src="textures/men1.jpg">-->
+        <img id="old_man-texture" src="textures//wood_8d.jpg">
         <!-- - old_man -->
 
         <!-- nefertiti -->
@@ -260,13 +260,12 @@
       <!--<a-entity obj-model="obj: #female_head-obj;" material="src: #female_head-texture"></a-entity>-->
       <a-entity ctm="src: #female_head-ctm; name:female_head;"></a-entity>
 
-      <a-entity obj-model="obj: #lion-obj;" scale="0.005 0.005 0.005" position="-2.5 1.5 -1" rotation="-90 0 0" material="src: #lion-texture"></a-entity>
       <!--<a-entity ctm="src: #lion-ctm; name:lion;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #greek_bust-obj;" material="src: #greek_bust-texture"></a-entity>-->
       <a-entity ctm="src: #greek_bust-ctm; name:greek_bust;"></a-entity>
 
-      <!--<a-entity obj-model="obj: #old_man-obj;" material="src: #old_man-texture"></a-entity>-->
+      <a-entity obj-model="obj: #old_man-obj;"  scale="0.005 0.005 0.005" material="src: #old_man-texture"></a-entity>
       <!--<a-entity ctm="src: #old_man-ctm; name:old_man;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #nefertiti-obj;" material="src: #nefertiti-texture"></a-entity>-->
