--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <!-- lion -->
        <a-asset-item id="lion-obj" src="models/Pallet.obj"></a-asset-item>
         <!-- <a-asset-item id="lion-ctm" src="models/lion.ctm"></a-asset-item>-->
-        <img id="lion-texture" src="textures//wood_8d.jpg">
+        <img id="lion-texture" src="textures/wood_8d.jpg">
         <!-- - lion -->
 
         <!-- greek_bust -->
@@ -265,7 +265,7 @@
       <!--<a-entity obj-model="obj: #greek_bust-obj;" material="src: #greek_bust-texture"></a-entity>-->
       <a-entity ctm="src: #greek_bust-ctm; name:greek_bust;"></a-entity>
 
-      <a-entity obj-model="obj: #old_man-obj;"  scale="0.00005 0.00005 0.00005" material="src: #old_man-texture"></a-entity>
+      <a-entity obj-model="obj: #old_man-obj;"  scale="0.0003 0.0003 0.0003" material="src: #old_man-texture"></a-entity>
       <!--<a-entity ctm="src: #old_man-ctm; name:old_man;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #nefertiti-obj;" material="src: #nefertiti-texture"></a-entity>-->
