--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
         <!-- - greek_bust -->
 
         <!-- old_man -->
-        <a-asset-item id="old_man-obj" src="models//3d-model.obj"></a-asset-item>
+        <a-asset-item id="old_man-obj" src="models/3d-model.obj"></a-asset-item>
         <!--<a-asset-item id="old_man-ctm" src="models/old_man.ctm"></a-asset-item>-->
-        <img id="old_man-texture" src="textures//wood_8d.jpg">
+        <img id="old_man-texture" src="textures//wood_8b.jpg">
         <!-- - old_man -->
 
         <!-- nefertiti -->
@@ -259,7 +259,8 @@
 
       <!--<a-entity obj-model="obj: #female_head-obj;" material="src: #female_head-texture"></a-entity>-->
       <a-entity ctm="src: #female_head-ctm; name:female_head;"></a-entity>
-
+	    
+      <a-entity obj-model="obj: #lion-obj;"  scale="0.03 0.03 0.03" rotation="+45 0 0" material="src: #lion-texture"></a-entity> 
       <!--<a-entity ctm="src: #lion-ctm; name:lion;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #greek_bust-obj;" material="src: #greek_bust-texture"></a-entity>-->
