--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <!-- old_man -->
         <a-asset-item id="old_man-obj" src="models/3d-model.obj"></a-asset-item>
         <!--<a-asset-item id="old_man-ctm" src="models/old_man.ctm"></a-asset-item>-->
-        <img id="old_man-texture" src="textures//wood_8b.jpg">
+        <img id="old_man-texture" src="textures//wood_8d.jpg">
         <!-- - old_man -->
 
         <!-- nefertiti -->
@@ -266,7 +266,7 @@
       <!--<a-entity obj-model="obj: #greek_bust-obj;" material="src: #greek_bust-texture"></a-entity>-->
       <a-entity ctm="src: #greek_bust-ctm; name:greek_bust;"></a-entity>
 
-      <a-entity obj-model="obj: #old_man-obj;"  scale="0.0001 0.0001 0.0001" material="src: #old_man-texture"></a-entity>
+      <a-entity obj-model="obj: #old_man-obj;"  scale="0.0001 0.0001 0.0001" position="0 1 6" material="src: #old_man-texture"></a-entity>
       <!--<a-entity ctm="src: #old_man-ctm; name:old_man;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #nefertiti-obj;" material="src: #nefertiti-texture"></a-entity>-->
