--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <!-- - nefertiti -->
 
         <!-- fractal_1 -->
-        <!--<a-asset-item id="fractal_1-obj" src="models/fractal_1.obj"></a-asset-item>-->
+        <a-asset-item id="fractal_1-glb" src="models/Elephant.glb"></a-asset-item>
         <!--<a-asset-item id="fractal_1-ctm" src="models/fractal_1.ctm"></a-asset-item>-->
         <!--<img id="fractal_1-texture" src="textures/fractal_1.jpg">-->
         <!-- - fractal_1 -->
@@ -272,7 +272,7 @@
       <!--<a-entity obj-model="obj: #nefertiti-obj;" material="src: #nefertiti-texture"></a-entity>-->
       <a-entity ctm="src: #nefertiti-ctm; name:nefertiti;"></a-entity>
 
-      <!--<a-entity obj-model="obj: #fractal_1-obj;" material="src: #fractal_1-texture"></a-entity>-->
+      <a-entity gltf-model="gltf: #fractal_1-glb;" material="src: #fractal_1-texture"></a-entity>
       <a-entity ctm="src: #fractal_1-ctm; name:fractal_1;"></a-entity>
 
       <!--<a-entity obj-model="obj: #fractal_2-obj;" material="src: #fractal_2-texture"></a-entity>-->
