--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       <a-entity ctm="src: #nefertiti-ctm; name:nefertiti;"></a-entity>
 
       <a-entity gltf-model="gltf: #fractal_1-glb;" material="src: #fractal_1-texture"></a-entity>
-      <a-entity ctm="src: #fractal_1-ctm; name:fractal_1;"></a-entity>
+      <!--<a-entity ctm="src: #fractal_1-ctm; name:fractal_1;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #fractal_2-obj;" material="src: #fractal_2-texture"></a-entity>-->
       <a-entity ctm="src: #fractal_2-ctm; name:fractal_2;"></a-entity>
