--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <!-- old_man -->
         <a-asset-item id="old_man-obj" src="models/3d-model.obj"></a-asset-item>
         <!--<a-asset-item id="old_man-ctm" src="models/old_man.ctm"></a-asset-item>-->
-        <img id="old_man-texture" src="textures//wood_8d.jpg">
+        <img id="old_man-texture" src="textures/wood_8d.jpg">
         <!-- - old_man -->
 
         <!-- nefertiti -->
@@ -186,9 +186,9 @@
         <!-- - nefertiti -->
 
         <!-- fractal_1 -->
-        <a-asset-item id="fractal_1-glb" src="models/Elephant.glb"></a-asset-item>
+        <a-asset-item id="fractal_1-obj" src="models/Elephant.obj"></a-asset-item>
         <!--<a-asset-item id="fractal_1-ctm" src="models/fractal_1.ctm"></a-asset-item>-->
-        <!--<img id="fractal_1-texture" src="textures/fractal_1.jpg">-->
+        <img id="fractal_1-texture" src="textures/wood_8d.jpg">
         <!-- - fractal_1 -->
 
         <!-- fractal_2 -->
@@ -272,7 +272,7 @@
       <!--<a-entity obj-model="obj: #nefertiti-obj;" material="src: #nefertiti-texture"></a-entity>-->
       <a-entity ctm="src: #nefertiti-ctm; name:nefertiti;"></a-entity>
 
-      <a-entity gltf-model="gltf: #fractal_1-glb;" material="src: #fractal_1-texture"></a-entity>
+      <a-entity obj-model="gltf: #fractal_1-obj;" material="src: #fractal_1-texture"></a-entity>
       <!--<a-entity ctm="src: #fractal_1-ctm; name:fractal_1;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #fractal_2-obj;" material="src: #fractal_2-texture"></a-entity>-->
