--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       <!--<a-entity obj-model="obj: #nefertiti-obj;" material="src: #nefertiti-texture"></a-entity>-->
       <a-entity ctm="src: #nefertiti-ctm; name:nefertiti;"></a-entity>
 
-      <a-entity obj-model="gltf: #fractal_1-obj;" material="src: #fractal_1-texture"></a-entity>
+      <a-entity obj-model="obj: #fractal_1-obj;" scale="1 1 1" material="src: #fractal_1-texture"></a-entity>
       <!--<a-entity ctm="src: #fractal_1-ctm; name:fractal_1;"></a-entity>-->
 
       <!--<a-entity obj-model="obj: #fractal_2-obj;" material="src: #fractal_2-texture"></a-entity>-->
