--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <!-- hall -->
         <a-asset-item id="hall-obj" src="models/hall.obj"></a-asset-item>
-        <img id="hall-texture" src="textures/hall.jpg">
+        <img id="hall-texture" src="textures/mur3.jpg">
         <!--<img id="hall_normal-texture" src="textures/hall_normal.jpg">-->
         <!-- - hall -->
 
